Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37355

QDoc: Auto-generate signal handler names in \qmlsignal

    XMLWordPrintable

Details

    • 13
    • DaVinci sprint 3, DaVinci sprint 4, DaVinci sprint 5
    • e18472fdd03a1a0633aa153ba8e579be4869fcf3

    Description

      The QML Documentation Style page (http://qt-project.org/wiki/QMLDocumentationStyle ) says, "Signal documentation must... mention the corresponding signal handler", and gives this example:

      /*
          This signal is emitted when the user clicks the button. A click is defined
          as a press followed by a release. The corresponding handler is
          \c onClicked.
      */
      

      This is a good candidate for automatic text generation. Rather than ask developers to write it out manually (which takes extra effort and might be overlooked/wrongly-written), QDoc can append "The corresponding handler is \c on<CapitalizedSignalName>." as a standalone paragraph to the documentation.

      Tasks

      1. Add this feature to QDoc (including necessary refactoring as required)
      2. Remove the lines that have already been added manually
      3. Update tests
      4. Update the wiki page; no longer ask developers to mention the handler names

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            jksh Sze Howe Koh
            Paul Wicking Paul Wicking
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes