src/qdoc/generator.h
@@ -53,6 +53,7 @@ class Generator
 
 public:
     enum ListType { Generic, Obsolete };
+    enum Addendum { Invokable, PrivateSignal, AssociatedProperties };
 
     Generator();
     virtual ~Generator();
@@ -140,8 +141,7 @@ protected:
     static QString formatSince(const Node *node);
     void generateSince(const Node *node, CodeMarker *marker);
     void generateStatus(const Node *node, CodeMarker *marker);
-    void generatePrivateSignalNote(const Node *node, CodeMarker *marker);
-    void generateInvokableNote(const Node *node, CodeMarker *marker);
+    virtual void generateAddendum(const Node *node, Addendum type, CodeMarker *marker);
     void generateThreadSafeness(const Node *node, CodeMarker *marker);
     QString getMetadataElement(const Aggregate *inner, const QString &t);
     QStringList getMetadataElements(const Aggregate *inner, const QString &t);
